# DistributedSystems

./: Cargo.toml  README.md
example/: Cargo.toml
example-bidirectional/: Cargo.toml  build.rs
example-bidirectional/proto/example/: example.proto
example-bidirectional/src/: example.rs  master.rs
example/proto/example/: example.proto
example/src/: master.rs  worker.rs
mapreduce/: About.md  Cargo.toml  notes
mapreduce/proto/: mapreduce.proto
mapreduce/src/: master.rs  worker.rs
mapreduce/src/mr_master/: mod.rs  partitioner.rs  task_manager.rs
mrmaster/: Cargo.toml
mrworker/: Cargo.toml
