[package]
name = "mapreduce"
version = "0.1.0"
authors = ["MishaChavarha <mishachavarha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] 
name = "mapreduce-worker"
path = "src/worker.rs"

[[bin]] 
name = "mapreduce-master"
path = "src/master.rs"


[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = "2.33.3"

[build-dependencies]
tonic-build = "0.4"
